src/main/java/com/example/fileserver/common/error/MetadataSynchronizationException.java
package com.example.fileserver.common.error;

public class MetadataSynchronizationException extends RuntimeException {

    public MetadataSynchronizationException(String message, Throwable cause) {
        super(message, cause);
    }
}
